<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    app:behavior_hideable="false"
    app:behavior_peekHeight="150dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/stmaryblue">

        <TextView
            android:id="@+id/locationNametextView"
            android:layout_width="375dp"
            android:layout_height="wrap_content"
            android:text="@string/LocationNamePlaceholder"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:translationX="20dp"
            android:translationY="10dp" />

        <!--START BUTTON-->
        <Button
            android:id="@+id/startButton"
            style="buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="35dp"

            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/custom_button"
            android:text="@string/StartButtonText"
            android:textColor="@color/stmarydarkblue"
            android:textColorHighlight="@color/stmaryblue"
            android:translationX="150dp"
            android:translationY="100dp" />

        <!--CALL BUTTON-->
        <Button
            android:id="@+id/callButton"
            style="buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="35dp"

            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/custom_button"
            android:text="@string/CallButtonText"
            android:textColor="@color/stmarydarkblue"
            android:textColorHighlight="@color/stmaryblue"
            android:translationX="283dp"
            android:translationY="100dp" />

        <!--DIRECTIONS BUTTON-->
        <Button
            android:id="@+id/directButton"
            style="buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="35dp"

            android:layout_marginStart="120dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/custom_button"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/DirectionsButtonText"
            android:textColor="@color/stmarydarkblue"
            android:textColorHighlight="@color/stmaryblue"
            android:translationX="-100dp"
            android:translationY="100dp"/>

    </RelativeLayout>


</LinearLayout>