<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/informationBar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    app:behavior_hideable="false"
    app:behavior_peekHeight="150dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/infobardesign">

        <TextView
            android:id="@+id/locationNametextView"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="41dp"
            android:layout_marginLeft="41dp"
            android:layout_marginEnd="70dp"
            android:layout_marginRight="70dp"
            android:text="@string/LocationNamePlaceholder"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:translationX="-25dp"
            android:translationY="10dp" />

        <!--START BUTTON-->
        <Button
            android:id="@+id/startButton"
            style="buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="20dp"
            android:layout_toStartOf="@+id/callButton"
            android:layout_toLeftOf="@+id/callButton"
            android:background="@drawable/custom_button"
            android:text="@string/StartButtonText"
            android:textColor="@color/stmarydarkblue"
            android:textColorHighlight="@color/stmaryblue"
            android:translationX="28dp"
            android:translationY="100dp" />

        <!--CALL BUTTON-->
        <Button
            android:id="@+id/callButton"
            style="buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="19dp"
            android:layout_marginRight="19dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/custom_button"
            android:text="@string/CallButtonText"
            android:textColor="@color/stmarydarkblue"
            android:textColorHighlight="@color/stmaryblue"
            android:translationX="10dp"
            android:translationY="100dp" />

        <!--DIRECTIONS BUTTON-->
        <Button
            android:id="@+id/directButton"
            style="buttonBarButtonStyle"
            android:layout_width="121dp"
            android:layout_height="35dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/custom_button"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/DirectionsButtonText"
            android:textColor="@color/stmarydarkblue"
            android:textColorHighlight="@color/stmaryblue"
            android:translationX="-10dp"
            android:translationY="100dp" />

        <!--PICTURES BUTTON-->
        <!--Could be put elsewhere if it gets in way or just looks bad-->
        <Button
            android:id="@+id/PictureButton"
            style="buttonBarButtonStyle"
            android:layout_width="50dp"
            android:layout_height="35dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="11dp"
            android:layout_marginLeft="11dp"
            android:layout_marginTop="55dp"
            android:layout_toEndOf="@+id/locationNametextView"
            android:layout_toRightOf="@+id/locationNametextView"
            android:background="@drawable/custom_button"
            android:drawableStart="@android:drawable/ic_menu_gallery"
            android:drawableTint="#050D19"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:translationX="-80dp"
            android:translationY="-40dp"
            android:drawableLeft="@android:drawable/ic_menu_gallery" />

    </RelativeLayout>
</LinearLayout>